compiler/tests/en/errors/no_field.salam
// EXPECT: E016
struct P:
    x i32 = 0
end

func main:
    p P = P {}
    __ p.q
end
